--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,23 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".modules.payment.paymentsummary.PaymentSummaryActivity"></activity>
+        <activity android:name=".modules.SplashScreenActivity"
+            android:theme="@style/SplashTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".modules.socialclub.SocialClubActivity" />
+        <activity android:name=".modules.news.NewsListActivity" />
+        <activity android:name=".modules.dashboard.DashboardMenuActivity" />
+        <activity android:name=".modules.payment.paymentsummary.PaymentSummaryActivity" />
         <activity android:name=".modules.payment.paymentprintreceipt.PaymentPrintReceiptActivity" />
         <activity android:name=".utils.urbanizationAddPhotoGallery.JadblackPhotoViewer" />
         <activity android:name=".modules.payment.paymentheader.PaymentActivity" />
@@ -25,14 +38,7 @@
             android:theme="@style/NoActionBarTheme" />
         <activity android:name=".modules.login.LoginActivity" />
         <activity android:name=".modules.UrbanizationActivity" />
-        <activity android:name=".modules.WelcomeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".modules.WelcomeActivity"/>
 
         <provider
             android:name="androidx.core.content.FileProvider"
